fixed a couple of alignment issues, still having trouble with nav bar appearing on screen

--- a/styles.css
+++ b/styles.css
@@ -2,8 +2,6 @@
 
 * {
   box-sizing: border-box;
-  margin: 0;
-  padding: 0;
   font-family: 'Poppins', sans-serif;
 }
 
@@ -11,6 +9,11 @@ html,
 body {
   height: 100vh;
   width: 100%;
+}
+
+body {
+  margin: 0;
+  padding: 0;
 }
 
 /* Background */
